<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_degraded"
    tools:context=".Views.InicioSistema.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.65">

            <ImageView
                android:id="@+id/Logo"
                android:layout_width="237dp"
                android:layout_height="129dp"
                android:layout_centerInParent="true"
                android:background="@drawable/logo" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.35"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/paddin_horizontal_login">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/Login_Text_Padding"
                    android:layout_marginEnd="@dimen/Login_Text_Padding"
                    android:theme="@style/EditTextWhite">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_useremail"
                        android:inputType="textPersonName" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/Login_Text_Padding"
                    android:layout_marginEnd="@dimen/Login_Text_Padding"
                    android:theme="@style/EditTextWhite">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/Login_Text_Padding"
                    android:layout_marginEnd="@dimen/Login_Text_Padding"
                    android:text="@string/text_button_login"
                    android:theme="@style/RaisedButtonDark"
                    />

                <Button
                    android:id="@+id/loginFace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/FaceLog"
                    android:layout_marginStart="@dimen/Login_Text_Padding"
                    android:layout_marginEnd="@dimen/Login_Text_Padding"
                    android:theme="@style/RaisedButtonFace" />

                <Button
                    android:id="@+id/loginGoogle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/GoogleLog"
                    android:layout_marginStart="@dimen/Login_Text_Padding"
                    android:layout_marginEnd="@dimen/Login_Text_Padding"
                    android:theme="@style/RaisedButtonGoogle" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/edittext_margin_createaccount">

                    <TextView
                        android:id="@+id/forgotAccount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/forgotPass"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/textsize_donthaveaccount"
                        android:textStyle="bold" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/withoutPass"
                        android:layout_margin="12dp"
                        android:gravity="center_horizontal"
                        android:layout_below="@+id/forgotAccount">
                        <TextView
                            android:id="@+id/dontHaveAccount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dont_have_account"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/textsize_donthaveaccount"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/createHere"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@+id/dontHaveAccount"
                            android:text="@string/create_here"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/textsize_donthaveaccount"
                            android:textStyle="bold" />
                    </RelativeLayout>

                </RelativeLayout>

            </LinearLayout>
        </ScrollView>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="20dp"
            android:visibility="gone" />

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>