<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"

    android:id="@+id/itemanuncio_cardview"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_cardview"
    android:layout_marginStart="@dimen/padding_recycler_margin"
    android:layout_marginEnd="@dimen/padding_recycler_margin"
    cardview:cardCornerRadius="@dimen/cornerradius_cardview"
    android:layout_marginTop="@dimen/horizontal_margin">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/cardview_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_cardview"
            android:background="@drawable/logo"
            android:scaleType="centerCrop" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/fecha_anuncio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"/>
            </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/backgroundText_card"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_marginDown"
            android:paddingEnd="@dimen/activity_vertical_margin"
            android:paddingStart="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/title_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_product"
                android:textColor="@android:color/white"
                android:textSize="@dimen/productnamesize" />

            <TextView
                android:id="@+id/longdesc"
                android:layout_height="0dp"
                android:layout_width="0dp"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/phone"
                android:layout_height="0dp"
                android:layout_width="0dp"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/modo"
                android:layout_height="0dp"
                android:layout_width="0dp"
                android:visibility="invisible"/>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/SolesWord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Soles_sign_card"
                    android:textColor="@color/green"
                    android:textSize="@dimen/priceword_texSize_Card" />

                <TextView
                    android:id="@+id/price_ad"
                    android:layout_width="@dimen/widthPrice"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/SolesWord"
                    android:text="@string/priceword_card"
                    android:textColor="@color/green"
                    android:textSize="@dimen/priceword_texSize_Card" />


                <CheckBox
                    android:id="@+id/likeCheckCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:button="@drawable/checkbox_selector" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cardview_short_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/descriptionhere"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</android.support.v7.widget.CardView>